i dont know why

--- a/Labs2021/SO-2021-master/kolos2/Kolokwium2/CondVar/makefile
+++ b/Labs2021/SO-2021-master/kolos2/Kolokwium2/CondVar/makefile
@@ -3,7 +3,7 @@ LDLIBS=-pthread
 CC = gcc
 
 main: main.c
-	$(CC) $^ -o $@ $(CFLAGS) -lpthread
+	$(GCCF) $^ -o $@ $(CFLAGS) -lpthread
 
 test: ${PROG}
 	@echo -e "\n\nTESTING\n\n"
