add all cw01/zad02

--- a/cw01/zad02/Makefile
+++ b/cw01/zad02/Makefile
@@ -1,4 +1,4 @@
-GCCF = gcc -O0 -Wall -ggdb
+	GCCF = gcc -O0 -Wall -ggdb
 LIBS = ../zad01/
 OUTPUT = ./zad02
 TIMESTART = ts
@@ -21,17 +21,11 @@ all:
 	$(OUTPUT) create_table 5 $(TIMESTART) wc_files medium.txt medium.txt medium.txt medium.txt medium.txt all_operation_name 5medium $(TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_5medium $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_5medium $(TIMEFINIS)
 	$(OUTPUT) create_table 10 $(TIMESTART) wc_files medium.txt medium.txt medium.txt medium.txt medium.txt medium.txt medium.txt medium.txt medium.txt medium.txt all_operation_name 10medium $(TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_10medium $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_10medium $(TIMEFINIS)
 	$(OUTPUT) create_table 1 $(TIMESTART) wc_files big.txt all_operation_name 1big $(TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_1big $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_1big $(TIMEFINIS)
-	$(OUTPUT) create_table 5 $(TIMESTART) wc_files big.txt big.txt big.txt big.txt big.txt all_operation_name 5big $(TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_5big $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_5big $(TIMEFINIS)
+	$(OUTPUT) create_table 5 $(TIMESTART) wc_files big.txt big.txt big.txt big.txt big.txt all_operation_name 5big $(	TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_5big $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_5big $(TIMEFINIS)
 	$(OUTPUT) create_table 10 $(TIMESTART) wc_files big.txt big.txt big.txt big.txt big.txt big.txt big.txt big.txt big.txt big.txt all_operation_name 10big $(TIMEFINIS) $(TIMESTART) create_block all_operation_name create_block_10big $(TIMEFINIS) $(TIMESTART) remove_block 1 all_operation_name remove_block_10big $(TIMEFINIS)
 
 	$(OUTPUT) create_table 5 $(TIMESTART) create_block remove_block 1 create_block create_block remove_block 1 remove_block 2 create_block create_block create_block remove_block 1 remove_block 2 remove_block 3 all_operation_name create_remove_blocks $(TIMEFINIS)
 
 .PHONY: clean
 clean:
-	rm -f *.o *.a *.so $(OUTPUT) report2.txt
-
-.PHONY: test
-test:
-	$(GCCF) -c $(LIBS)counter.c
-	$(GCCF) -c test.c
-	$(GCCF) test.o counter.o -o ./test
+	rm -f *.o *.a *.so $(OUTPUT) zad02
