temp cw02/zad1 version

--- a/cw02/zad1/Makefile
+++ b/cw02/zad1/Makefile
@@ -1,2 +1,16 @@
-test_%:
-	echo $*
+GCCF = gcc -Wall -ggdb
+OUTPUT = ./zad1
+OUTFILE = ./big_new.txt
+
+build:
+	$(GCCF) -c zad1.c
+	$(GCCF) zad1.o -o $(OUTPUT)
+
+.PHONY: all
+all:
+	make build
+	$(OUTPUT) ./big.txt $(OUTFILE)
+
+.PHONY: clean
+clean:
+	rm -f *.o $(OUTPUT) $(OUTFILE)
