finished cw02/zad1

--- a/cw02/zad1/Makefile
+++ b/cw02/zad1/Makefile
@@ -1,16 +1,23 @@
 GCCF = gcc -Wall -ggdb
-OUTPUT = ./zad1s
+OUTPUTS = ./zad1s
+OUTPUTL = ./zad1l
+INFILE = ./big.txt
 OUTFILE = ./big_new.txt
 
-build:
+build_sys:
 	$(GCCF) -c zad1s.c
-	$(GCCF) zad1s.o -o $(OUTPUT)
+	$(GCCF) zad1s.o -o $(OUTPUTS)
+build_lib:
+	$(GCCF) -c zad1l.c
+	$(GCCF) zad1l.o -o $(OUTPUTL)
 
 .PHONY: all
 all:
-	make build
-	$(OUTPUT) ./big.txt $(OUTFILE)
+	make build_sys
+	make build_lib
+	$(OUTPUTS) $(INFILE) $(OUTFILE) >  pomiar_zad_1.txt
+	$(OUTPUTL) $(INFILE) $(OUTFILE) >> pomiar_zad_1.txt
 
 .PHONY: clean
 clean:
-	rm -f *.o $(OUTPUT) $(OUTFILE)
+	rm -f *.o $(OUTPUTS) $(OUTPUTL) $(OUTFILE)
