almost finished lab02

--- a/cw02/zad3/Makefile
+++ b/cw02/zad3/Makefile
@@ -1,8 +1,7 @@
 GCCF = gcc -Wall -ggdb
 OUTPUT = ./zad3
-#OUTFILE = ./big_new.txt
 PATH1 = "/home/mrrys00/Studia/4.Semestr/Systemy Operacyjne/SysOpy/cw02"
-PATH2 = "/dev/input/"
+PATH2 = "/dev/input"
 
 build:
 	$(GCCF) -c zad3nftw.c
@@ -11,13 +10,8 @@ build:
 .PHONY: all
 all:
 	make build
-	$(OUTPUT) $(PATH1)
+	$(OUTPUT) $(PATH2)
 
 .PHONY: clean
 clean:
-	rm -f *.o $(OUTPUT) $(OUTFILE)
-
-test:
-	$(GCCF) -c test.c
-	$(GCCF) test.o -o ./testt
-	./testt
+	rm -f *.o $(OUTPUT)
