--- a/cw03/zad1/Makefile
+++ b/cw03/zad1/Makefile
@@ -1,24 +1,15 @@
 GCCF = gcc -Wall -ggdb
-OUTPUTN = ./zad3nftw
-OUTPUTD = ./zad3dir
-PATH1 = "."
-PATH2 = "/dev/input"
+OUTPUT = ./zad1
 
-build_nftw:
-	$(GCCF) -c zad3nftw.c
-	$(GCCF) zad3nftw.o -o $(OUTPUTN)
-
-build_dir:
-	$(GCCF) -c zad3dir.c
-	$(GCCF) zad3dir.o -o $(OUTPUTD)
+build:
+	$(GCCF) -c zad1.c
+	$(GCCF) zad1.o -o $(OUTPUT)
 
 .PHONY: all
 all:
-	make build_nftw
-	$(OUTPUTN) $(PATH2)
-	make build_dir
-	$(OUTPUTD) $(PATH2)
+	make build
+	$(OUTPUT) 15
 
 .PHONY: clean
 clean:
-	rm -f *.o $(OUTPUTN) $(OUTPUTD)
+	rm -f *.o $(OUTPUT)
