--- a/cw03/zad2/Makefile
+++ b/cw03/zad2/Makefile
@@ -8,30 +8,47 @@ build:
 
 run:
 	echo "##################### Riemman Integration report #####################" > $(REPORT)
-	$(OUTPUT) 0.1 16		>> $(REPORT)
-	$(OUTPUT) 0.1 128		>> $(REPORT)
-	$(OUTPUT) 0.1 1024		>> $(REPORT)
-	$(OUTPUT) 0.1 8192		>> $(REPORT)
-
-	$(OUTPUT) 0.01 16		>> $(REPORT)
-	$(OUTPUT) 0.01 128		>> $(REPORT)
-	$(OUTPUT) 0.01 1024		>> $(REPORT)
-	$(OUTPUT) 0.01 8192		>> $(REPORT)
-
-	$(OUTPUT) 0.001 16		>> $(REPORT)
-	$(OUTPUT) 0.001 128		>> $(REPORT)
-	$(OUTPUT) 0.001 1024	>> $(REPORT)
-	$(OUTPUT) 0.001 8192	>> $(REPORT)
-
 	$(OUTPUT) 0.0001 16		>> $(REPORT)
 	$(OUTPUT) 0.0001 128	>> $(REPORT)
 	$(OUTPUT) 0.0001 1024	>> $(REPORT)
 	$(OUTPUT) 0.0001 8192	>> $(REPORT)
+	$(OUTPUT) 0.0001 16384	>> $(REPORT)
 
 	$(OUTPUT) 0.00001 16	>> $(REPORT)
 	$(OUTPUT) 0.00001 128	>> $(REPORT)
 	$(OUTPUT) 0.00001 1024	>> $(REPORT)
 	$(OUTPUT) 0.00001 8192	>> $(REPORT)
+	$(OUTPUT) 0.00001 16384	>> $(REPORT)
+
+	$(OUTPUT) 0.000001 16		>> $(REPORT)
+	$(OUTPUT) 0.000001 128		>> $(REPORT)
+	$(OUTPUT) 0.000001 1024		>> $(REPORT)
+	$(OUTPUT) 0.000001 8192		>> $(REPORT)
+	$(OUTPUT) 0.000001 16384		>> $(REPORT)
+
+	$(OUTPUT) 0.0000001 16		>> $(REPORT)
+	$(OUTPUT) 0.0000001 128		>> $(REPORT)
+	$(OUTPUT) 0.0000001 1024	>> $(REPORT)
+	$(OUTPUT) 0.0000001 8192	>> $(REPORT)
+	$(OUTPUT) 0.0000001 16384	>> $(REPORT)
+
+	$(OUTPUT) 0.00000001 16		>> $(REPORT)
+	$(OUTPUT) 0.00000001 128	>> $(REPORT)
+	$(OUTPUT) 0.00000001 1024	>> $(REPORT)
+	$(OUTPUT) 0.00000001 8192	>> $(REPORT)
+	$(OUTPUT) 0.00000001 16384	>> $(REPORT)
+
+	$(OUTPUT) 0.000000001 16	>> $(REPORT)
+	$(OUTPUT) 0.000000001 128	>> $(REPORT)
+	$(OUTPUT) 0.000000001 1024	>> $(REPORT)
+	$(OUTPUT) 0.000000001 8192	>> $(REPORT)
+	$(OUTPUT) 0.000000001 16384	>> $(REPORT)
+
+	$(OUTPUT) 0.0000000001 16	>> $(REPORT)
+	$(OUTPUT) 0.0000000001 128	>> $(REPORT)
+	$(OUTPUT) 0.0000000001 1024	>> $(REPORT)
+	$(OUTPUT) 0.0000000001 8192	>> $(REPORT)
+	$(OUTPUT) 0.0000000001 16384	>> $(REPORT)
 
 .PHONY: all
 all:
