--- a/cw03/zad2/Makefile
+++ b/cw03/zad2/Makefile
@@ -1,4 +1,4 @@
-GCCF = gcc -Wall -ggdb -O0
+GCCF = gcc -Wall -ggdb -O3
 OUTPUT = ./zad2
 REPORT = report.txt
 
@@ -49,6 +49,12 @@ run:
 	$(OUTPUT) 0.0000000001 1024	>> $(REPORT)
 	$(OUTPUT) 0.0000000001 8192	>> $(REPORT)
 	$(OUTPUT) 0.0000000001 16384	>> $(REPORT)
+
+	$(OUTPUT) 0.00000000001 16	>> $(REPORT)
+	$(OUTPUT) 0.00000000001 128	>> $(REPORT)
+	$(OUTPUT) 0.00000000001 1024	>> $(REPORT)
+	$(OUTPUT) 0.00000000001 8192	>> $(REPORT)
+	$(OUTPUT) 0.00000000001 16384	>> $(REPORT)
 
 .PHONY: all
 all:
