--- a/cw04/zad1/Makefile
+++ b/cw04/zad1/Makefile
@@ -1,3 +1,5 @@
+MAKEFLAGS += --no-print-directory
+
 GCCF = gcc -Wall -ggdb -O0
 OUTPUTEXEC = ./zad1exec
 OUTPUTFORK = ./zad1fork
@@ -14,13 +16,12 @@ build_test:
 	$(GCCF) -c $(OUTPUTTEST).c
 	$(GCCF) $(OUTPUTTEST).o -o $(OUTPUTTEST)
 build_all:
-	make build_exec
-	make build_fork
-	make build_test
+	$(MAKE) build_exec
+	$(MAKE) build_fork
+	$(MAKE) build_test
 
 test_exec:
 	$(OUTPUTEXEC) ignore
-	$(OUTPUTEXEC) handler
 	$(OUTPUTEXEC) mask
 	$(OUTPUTEXEC) pending
 
@@ -31,17 +32,13 @@ test_fork:
 	$(OUTPUTFORK) pending
 
 test_all:
-	echo "################ report 2 ################" >  $(REPORT)
-	echo "################ exec test ################" >> $(REPORT)
-	make test_exec
-	echo "################ fork test ################" >> $(REPORT)
-	make test_fork
-	echo "################ report\0 ################" >> $(REPORT)
+	$(MAKE) test_exec
+	$(MAKE) test_fork
 
 .PHONY: all
 all:
-	make build_all
-	make test_all
+	$(MAKE) build_all
+	$(MAKE) test_all > $(REPORT)
 
 .PHONY: clean
 clean:
